--- a/Projetos/pj001/ramon.html
+++ b/Projetos/pj001/ramon.html
@@ -19,7 +19,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Quem sou eu?</a>
-        <a href="#">Fale comigo!</a>
+        <a href="#">Minhas Redes!</a>
 
     </nav>
     <main>
