--- a/Exercícios/ex022 - imagens de fundo/fundo006.html
+++ b/Exercícios/ex022 - imagens de fundo/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fico de tela</title>
     <style>
         body {
             height: 100vh;
@@ -13,11 +13,19 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand background
+                color > image > position > repeat > [size] > attachement
+                
+                background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+                background-size: cover;
+            */
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,9 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vitae facere blanditiis cum, deleniti maiores, repudiandae sed iste, quae aperiam hic quis? Qui perspiciatis libero itaque possimus consequatur in Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum minus aperiam distinctio, tempore ex! Tenetur, at corrupti. Exercitationem consectetur rem unde quas nobis facilis repellat culpa veritatis animi sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat est labore mollitia neque sapiente tempore numquam cumque quam, quo corrupti. Omnis eveniet maxime iure, beatae error accusamus numquam suscipit consectetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vitae facere blanditiis cum, deleniti maiores, repudiandae sed iste, quae aperiam hic quis? Qui perspiciatis libero itaque possimus consequatur in Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum minus aperiam distinctio, tempore ex! Tenetur, at corrupti. Exercitationem consectetur rem unde quas nobis facilis repellat culpa veritatis animi sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat est labore mollitia neque sapiente tempore numquam cumque quam, quo corrupti. Omnis eveniet maxime iure, beatae error accusamus numquam suscipit consectetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vitae facere blanditiis cum, deleniti maiores, repudiandae sed iste, quae aperiam hic quis? Qui perspiciatis libero itaque possimus consequatur in Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum minus aperiam distinctio, tempore ex! Tenetur, at corrupti. Exercitationem consectetur rem unde quas nobis facilis repellat culpa veritatis animi sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat est labore mollitia neque sapiente tempore numquam cumque quam, quo corrupti. Omnis eveniet maxime iure, beatae error accusamus numquam suscipit consectetur.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vitae facere blanditiis cum, deleniti maiores, repudiandae sed iste, quae aperiam hic quis? Qui perspiciatis libero itaque possimus consequatur in Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum minus aperiam distinctio, tempore ex! Tenetur, at corrupti. Exercitationem consectetur rem unde quas nobis facilis repellat culpa veritatis animi sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat est labore mollitia neque sapiente tempore numquam cumque quam, quo corrupti. Omnis eveniet maxime iure, beatae error accusamus numquam suscipit consectetur.</p>
     </main>
     
